--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             that genuinely resonate with users and drive business success.
             <br />
             <br />
-            br When I'm not immersed in the world of pixels, I love traveling to
+            When I'm not immersed in the world of pixels, I love traveling to
             the mountains or painting. I'm also passionate about music. These
             activities ignite my creativity, inspire my work, and open my mind
             to new perspectives and ideas.
@@ -55,7 +55,21 @@
         <div class="product__card">
           <div class="product__card__head__container">
             <div class="product__card__head">
-              Command Centre <a class="product__card__btn" href=""> → </a>
+              Command Centre
+              <a class="product__card__btn" href="">
+                <svg
+                  width="16"
+                  height="16"
+                  viewBox="0 0 16 16"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M12.175 9H0V7H12.175L6.575 1.4L8 0L16 8L8 16L6.575 14.6L12.175 9Z"
+                    fill="white"
+                  />
+                </svg>
+              </a>
             </div>
             <p class="product__card__body">
               A Business Overview dashboard customised for VPs, Directors, and
@@ -68,7 +82,21 @@
         <div class="product__card">
           <div class="product__card__head__container">
             <div class="product__card__head">
-              Content Optimization <a class="product__card__btn" href=""> → </a>
+              Content Optimization
+              <a class="product__card__btn" href="">
+                <svg
+                  width="16"
+                  height="16"
+                  viewBox="0 0 16 16"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M12.175 9H0V7H12.175L6.575 1.4L8 0L16 8L8 16L6.575 14.6L12.175 9Z"
+                    fill="white"
+                  />
+                </svg>
+              </a>
             </div>
             <p class="product__card__body">
               A Dashboard to help Content Managers/Brand Managers/E-comm
@@ -85,7 +113,21 @@
         <div class="product__card">
           <div class="product__card__head__container">
             <div class="product__card__head">
-              MyRoommate <a class="product__card__btn" href=""> → </a>
+              MyRoommate
+              <a class="product__card__btn" href="">
+                <svg
+                  width="16"
+                  height="16"
+                  viewBox="0 0 16 16"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M12.175 9H0V7H12.175L6.575 1.4L8 0L16 8L8 16L6.575 14.6L12.175 9Z"
+                    fill="white"
+                  />
+                </svg>
+              </a>
             </div>
             <p class="product__card__body">
               A mobile application with features intended to solve day to day
@@ -99,7 +141,20 @@
           <div class="product__card__head__container">
             <div class="product__card__head">
               Chrome Plugin Open AI
-              <a class="product__card__btn" href=""> → </a>
+              <a class="product__card__btn" href="">
+                <svg
+                  width="16"
+                  height="16"
+                  viewBox="0 0 16 16"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M12.175 9H0V7H12.175L6.575 1.4L8 0L16 8L8 16L6.575 14.6L12.175 9Z"
+                    fill="white"
+                  />
+                </svg>
+              </a>
             </div>
             <p class="product__card__body">
               A plugin to analyze product insights on Market sentiments, Ratings
@@ -163,7 +218,7 @@
 
       <div class="testimony__container">
         <div class="testimony__card">
-          <p>
+          <p class="testimony__body">
             Bhavya is a highly skilled and dedicated Product Designer. Her
             ability to self-start and take initiative is truly impressive.
             Bhavya possesses an exceptional understanding of user problems and
@@ -183,7 +238,7 @@
         </div>
 
         <div class="testimony__card">
-          <p>
+          <p class="testimony__body">
             Bhavya is a highly skilled and dedicated Product Designer. Her
             ability to self-start and take initiative is truly impressive.
             Bhavya possesses an exceptional understanding of user problems and
@@ -191,7 +246,11 @@
             passion for design is evident in the consistently high-quality work
             she produces. One of Bhavya's standout qualities is her openness to
             feedback and her willingness to iterate on her designs. She actively
-            seeks constructive criticism...
+            seeks constructive criticism and uses it to refine her work,
+            ensuring the best possible outcomes. Additionally, Bhavya is not
+            afraid to ask insightful questions and challenge existing
+            approaches. Her talent, dedication, and proactive approach make
+            Bhavya an invaluable asset to any team.
           </p>
           <div class="person__container">
             <img src="./shubham.png" class="person__image" alt="" />
