--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           </p>
 
           <div class="hero__btn__group">
-            <a class="btn btn__primary" href="">View Case Studies</a>
-            <a class="btn btn__secondary" href="">Download Resume</a>
+            <a class="btn btn__primary case_study_link" href="#showcase">View Case Studies</a>
+            <a class="btn btn__secondary" target="_blank" href="https://drive.google.com/file/d/1jxuWv--PH-346-QyhZaGcxJfK4Z0W3d_/view">Download Resume</a>
           </div>
         </div>
         <div class="hero__right">
@@ -48,7 +48,7 @@
         </div>
       </div>
     </section>
-    <section class="showcase">
+    <section class="showcase" id="showcase">
       <h1 class="section__title">Product Design Showcase</h1>
 
       <div class="product__container">
@@ -56,7 +56,7 @@
           <div class="product__card__head__container">
             <div class="product__card__head">
               Command Centre
-              <a class="product__card__btn" href="">
+              <a class="product__card__btn" target="_blank" href="https://sinhabhavya-about.notion.site/Command-Centre-b0af79da0b13499aaa133935565174a6">
                 <svg
                   width="16"
                   height="16"
@@ -83,7 +83,7 @@
           <div class="product__card__head__container">
             <div class="product__card__head">
               Content Optimization
-              <a class="product__card__btn" href="">
+              <a class="product__card__btn" target="_blank" href="https://sinhabhavya-about.notion.site/Content-Optimization-92650eb3272e4f45bdae03c125905dac">
                 <svg
                   width="16"
                   height="16"
@@ -114,7 +114,7 @@
           <div class="product__card__head__container">
             <div class="product__card__head">
               MyRoommate
-              <a class="product__card__btn" href="">
+              <a class="product__card__btn" target="_blank" href="https://medium.com/@bhavsin32/my-roommate-a-mobile-app-for-roommates-to-solve-problems-in-a-shared-living-5e1b92aa6ddb">
                 <svg
                   width="16"
                   height="16"
@@ -141,20 +141,9 @@
           <div class="product__card__head__container">
             <div class="product__card__head">
               Chrome Plugin Open AI
-              <a class="product__card__btn" href="">
-                <svg
-                  width="16"
-                  height="16"
-                  viewBox="0 0 16 16"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M12.175 9H0V7H12.175L6.575 1.4L8 0L16 8L8 16L6.575 14.6L12.175 9Z"
-                    fill="white"
-                  />
-                </svg>
-              </a>
+              <span class="inprogress__card__btn">
+                In Progress
+              </span>
             </div>
             <p class="product__card__body">
               A plugin to analyze product insights on Market sentiments, Ratings
@@ -177,8 +166,7 @@
             <span class="trophy__icon">🔮</span>
             <h5 class="trophy__title">Think Big, Take Bets and Innovate</h5>
             <p class="trophy__details">
-              A mobile application with features targeted to solve day to day
-              problems in a shared living.
+              For my role in leading a comprehensive product design initiative that secured significant business deals.
             </p>
 
             <p class="trophy__date">June 2023</p>
@@ -188,8 +176,7 @@
             <span class="trophy__icon">🚀</span>
             <h5 class="trophy__title">Taking Ownership and deliver results</h5>
             <p class="trophy__details">
-              A mobile application with features targeted to solve day to day
-              problems in a shared living.
+              For initiating user research and introducing the "Spotlights" component, now a vital feature across all products.
             </p>
 
             <p class="trophy__date">December 2023</p>
@@ -201,8 +188,7 @@
               Customer Obsession and Bias for Action
             </h5>
             <p class="trophy__details">
-              A mobile application with features targeted to solve day to day
-              problems in a shared living.
+              For proactively initiating discovery sessions with clients to nail down the content optimization dashboard.
             </p>
 
             <p class="trophy__date">March 2024</p>
@@ -219,14 +205,7 @@
       <div class="testimony__container">
         <div class="testimony__card">
           <p class="testimony__body">
-            Bhavya is a highly skilled and dedicated Product Designer. Her
-            ability to self-start and take initiative is truly impressive.
-            Bhavya possesses an exceptional understanding of user problems and
-            consistently generates innovative solutions to address them. Her
-            passion for design is evident in the consistently high-quality work
-            she produces. One of Bhavya's standout qualities is her openness to
-            feedback and her willingness to iterate on her designs. She actively
-            seeks constructive criticism...
+            Bhavya is a highly skilled and dedicated Product Designer. Her ability to self-start and take initiative is truly impressive. Bhavya possesses an exceptional understanding of user problems and consistently generates innovative solutions to address them. Her passion for design is evident in the consistently high-quality work she produces. One of Bhavya's standout qualities is her openness to feedback and her willingness to iterate on her designs. She actively seeks constructive criticism and uses it to refine her work, ensuring the best possible outcomes. Additionally, Bhavya is not afraid to ask insightful questions and challenge existing approaches. Her talent, dedication, and proactive approach make Bhavya an invaluable asset to any team.
           </p>
           <div class="person__container">
             <img src="./kamila.png" class="person__image" alt="" />
@@ -239,18 +218,7 @@
 
         <div class="testimony__card">
           <p class="testimony__body">
-            Bhavya is a highly skilled and dedicated Product Designer. Her
-            ability to self-start and take initiative is truly impressive.
-            Bhavya possesses an exceptional understanding of user problems and
-            consistently generates innovative solutions to address them. Her
-            passion for design is evident in the consistently high-quality work
-            she produces. One of Bhavya's standout qualities is her openness to
-            feedback and her willingness to iterate on her designs. She actively
-            seeks constructive criticism and uses it to refine her work,
-            ensuring the best possible outcomes. Additionally, Bhavya is not
-            afraid to ask insightful questions and challenge existing
-            approaches. Her talent, dedication, and proactive approach make
-            Bhavya an invaluable asset to any team.
+            I’ve worked with Bhavya across multiple product launches. Her superpower is working through ambiguity and creating simple, intuitive designs that solve user problems!
           </p>
           <div class="person__container">
             <img src="./shubham.png" class="person__image" alt="" />
@@ -274,19 +242,19 @@
       <a class="mail" href="mailto:bhavsin32@gmail.com">bhavsin32@gmail.com</a>
 
       <div class="footer__icons">
-        <a href="">
+        <a href="https://www.linkedin.com/in/bhavya-sinha-668728153/" target="_blank">
           <img src="./linkedin.png" alt="" />
         </a>
-        <a href="">
+        <a href="https://dribbble.com/bhavyasinha" target="_blank">
           <img src="./dribble.png" alt="" />
         </a>
-        <a href="">
+        <a href="https://open.spotify.com/user/31mgcgiwxgt2umemyvyudcnyps2y?si=3a34f8baa9c940df" target="_blank">
           <img src="./spotify.png" alt="" />
         </a>
-        <a href="">
+        <a href="https://x.com/BhavyaSinha97" target="_blank">
           <img src="./twitter.png" alt="" />
         </a>
-        <a href="">
+        <a href="https://www.instagram.com/sinhabhavya/" target="_blank">
           <img src="./instagram.png" alt="" />
         </a>
       </div>
